NOTE: Add this to config.php   define('DB_SYSTEM', 'mysql');
10192013 -> jonnyboy -> removed part repair threaded, it was slower than non threaded
                        removed nzb-import-bulk.php, it does not function properly with duplicates and pdo
						added changes to part repair by Whitelighter
10162013 -> jonnyboy -> created new table for safe scripts
                        improved output for check_usenet_groups.php
                        changed guid creation to improve speed
                        changed import scripts dupe detection, was copying nzbs even if release not added
                        fixed a couple of bugs in releases
10152013 -> jonnyboy -> updated python script for category in pp additional
10142013 -> jonnyboy -> added update to nzbstatus
                        fixed a few bugs
10132013 -> jonnyboy -> allow requestid to work with relnamestatus 0 and 1
                        added new db connection to nzb-reog
                        fixed a few bugs in pgsql schema, added some regexes to renametopre.php
10112013 -> jonnyboy -> fixed a few bugs(kaibosh)
10062013 -> jonnyboy -> reverted my previous patch
                        removed check for dupe before release creation
10052103 -> jonnyboy -> added my rename script, would be better that these reges were part of namefixer/namecleaner
10032013 -> ThePeePs -> Added Script to update article numbers for groups when changing USP's rather than resetting all groups.
10032013 -> jonnyboy -> changed update/insert queries with last_record and first_record from dec to string
                        stage 7b query 3 not needed to run every loop, it is slow, so added check to only run sometimes
                        fixed bug in releases.php not catching duplicates properly
                        hide getid3.php line 1641 errors
                        fixed a couple bugs in python scripts
09302013 -> jonnyboy -> fixed binaries_safe_threaded.py
                        fixed many bugs